Dark mode style fixes

--- a/src/styles/theme/_dark-mode.scss
+++ b/src/styles/theme/_dark-mode.scss
@@ -3,19 +3,27 @@ html {
 }
 
 html[data-theme="dark"] {
+  filter: invert(0.9) hue-rotate(180deg);
   background: $dark-color;
-  filter: invert(1) hue-rotate(180deg);
+  color: $background-color;
   img,
   .modular-hero,
   .blog-listing .card-image a,
   .vscode-highlight.default-dark {
-    filter: invert(1) hue-rotate(180deg);
+    filter: invert(1) contrast(1.1) saturate(1.1) hue-rotate(180deg);
   }
   .header-dark #header {
     filter: invert(1) hue-rotate(180deg);
     &.scrolled {
       filter: invert(0) hue-rotate(180deg);
     }
+  }
+  .overlay-dark-gradient .image-overlay {
+    background: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0.5),
+      rgba(0, 0, 0, 0.4)
+    );
   }
 }
 
